--- a/GithubFeedSharingAndroid/AndroidManifest.xml
+++ b/GithubFeedSharingAndroid/AndroidManifest.xml
@@ -4,8 +4,11 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="14"
         android:targetSdkVersion="21" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
