--- a/GithubFeedSharingJavaServer/pom.xml
+++ b/GithubFeedSharingJavaServer/pom.xml
@@ -3,8 +3,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>br.com.juliocnsouza.labjparest</groupId>
-    <artifactId>GithubFeedSharingJavaServer</artifactId>
-    <version>1.0-JPA_REST</version>
+    <artifactId>GithubFeedSharing</artifactId>
+    <version>1.0</version>
     <packaging>war</packaging>
 
     <name>GithubFeedSharingJavaServer</name>
