--- a/GithubFeedSharingJavaServer/pom.xml
+++ b/GithubFeedSharingJavaServer/pom.xml
@@ -22,6 +22,11 @@
             <classifier>docs</classifier>
         </dependency>
         <dependency>
+            <groupId>org.mongodb</groupId>
+            <artifactId>mongo-java-driver</artifactId>
+            <version>2.11.3</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
